--- a/lab06new/src/components/Collection.css
+++ b/lab06new/src/components/Collection.css
@@ -1,7 +1,7 @@
 .collection {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-auto-rows: 150px;
 	align-items: center;
 	justify-content: space-around;
 	padding: 0;
