--- a/lab06/src/components/CollectionTypeItems.css
+++ b/lab06/src/components/CollectionTypeItems.css
@@ -16,3 +16,11 @@
 	flex-direction: column;
 	gap: 10px;
 }
+
+.items-list-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 100px;
+}
