--- a/guitar-shop/src/index.css
+++ b/guitar-shop/src/index.css
@@ -15,3 +15,14 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
 }
+@layer components {
+	.green-button {
+		@apply duration-200 bg-green-500 rounded p-1 text-white font-semibold hover:cursor-pointer hover:bg-green-700;
+	}
+	.orange-button {
+		@apply duration-200 bg-orange-500 hover:cursor-pointer text-white font-semibold rounded p-1 hover:bg-orange-700
+	}
+	.login-register-button {
+		@apply duration-200 bg-orange-500 rounded text-white font-bold p-2 px-4 m-4 text-2xl hover:bg-orange-700;
+	}
+}
